update links route

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo"><img src="/public/images/Logo (2).png" alt="JCC Logo"></a>
+        <a href="index.html" class="logo"><img src="/images/Logo (2).png" alt="JCC Logo"></a>
         <a href="index.html" class="nav_link">Accueil</a>
         <a href="#about" class="nav_link">À propos</a>
         <a href="#services" class="nav_link">Services</a>
@@ -20,62 +20,62 @@
             <h1 class="title">Jacob's Crystal Car</h1>
             <section class="services_section">
                 <div class="service">
-                    <img src="/public/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Lavage haute précision à la main</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Dégoudronnage et élimination des impuretés</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Lustrage et protection de la carrosserie</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Aspiration et dépoussiérage</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Nettoyage des sièges (tissu ou cuir)</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Désinfection et traitement des plastiques</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Polish et correction des micros-rayures</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Protection céramique : brillance durable</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Traitement hydrophobe</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Peinture personnalisée pour scooter et motos</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Restauration et réparation des carénages abîmés</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/public/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Finitions professionnelles</h1>
                 </div>
             </section>
