contact and menu btn responsive

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>JCC</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo"><img src="/images/Logo (2).png" alt="JCC Logo"></a>
-        <a href="index.html" class="nav_link">Accueil</a>
-        <a href="#about" class="nav_link">À propos</a>
-        <a href="#services" class="nav_link">Services</a>
-        <a href="" class="nav_link">Contacts</a>
+        <a href="index.html" class="logo"><img src="./images/Logo (2).png" alt="JCC Logo"></a>
+        
+        <div class="dropdown"><i class='bx bxs-down-arrow' style='color:#ffcc00'></i></div>
+        <div class="nav_links">
+            <a href="index.html" class="nav_link">Accueil</a>
+            <a href="#about" class="nav_link">À propos</a>
+            <a href="#services" class="nav_link">Services</a>
+            <a href="contact.html" class="nav_link">Contacts</a>
+        </div>
+
     </nav>
 
     <main>
@@ -20,62 +27,62 @@
             <h1 class="title">Jacob's Crystal Car</h1>
             <section class="services_section">
                 <div class="service">
-                    <img src="/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Lavage haute précision à la main</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Dégoudronnage et élimination des impuretés</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Lustrage et protection de la carrosserie</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Aspiration et dépoussiérage</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Nettoyage des sièges (tissu ou cuir)</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Désinfection et traitement des plastiques</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/towfiqu-barbhuiya-5m5418Ng6t8-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Polish et correction des micros-rayures</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/neelabh-raj-cw1914zDHUs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Protection céramique : brillance durable</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/olav-tvedt--oVaYMgBMbs-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Traitement hydrophobe</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Peinture personnalisée pour scooter et motos</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Restauration et réparation des carénages abîmés</h1>
                 </div>
 
                 <div class="service">
-                    <img src="/images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
+                    <img src="./images/clement-m-Ng3xrviPrhk-unsplash.jpg" alt="" class="service_img">
                     <h1 class="service_title">Finitions professionnelles</h1>
                 </div>
             </section>
@@ -160,8 +167,10 @@
 
     <footer>
         <p class="foot_link">Conditions d'achat</p>
-        <p class="foot_link">Contacts</p>
+        <a href="contact.html" class="foot_link">Contacts</a>
         <p class="foot_link">Mentions légales</p>
     </footer>
+
+    <script src="./dropdown.js"></script>
 </body>
 </html>
