--- a/public/contact.html
+++ b/public/contact.html
@@ -37,7 +37,7 @@
         </ul>
     </aside>
 
-    <form class="contact-form" method="POST" name="contact" data-netlify="true">
+    <form method="POST" name="contact" data-netlify="true" method="POST" name="contact" data-netlify="true">
         <h2>Ecrivez-nous !</h2>
         <div class="formulaire">
             <label for="name">Nom et Prénom</label>
