--- a/public/contact.html
+++ b/public/contact.html
@@ -16,8 +16,8 @@
         <div class="dropdown"><i class='bx bxs-down-arrow' style='color:#ffcc00'></i></div>
         <div class="nav_links">
             <a href="index.html" class="nav_link">Accueil</a>
-            <a href="#about" class="nav_link">À propos</a>
-            <a href="#services" class="nav_link">Services</a>
+            <a href="index.html#about" class="nav_link">À propos</a>
+            <a href="index.html#services" class="nav_link">Services</a>
             <a href="contact.html" class="nav_link">Contacts</a>
         </div>
 
@@ -27,7 +27,7 @@
 <main>
     <div class="contact">
     <aside>
-        <h1 class="title">Jacob's Clean Car</h1>
+        <h1 class="title">Jacob's contact</h1>
 
         <ul class="side-menu">
             <li class="address_info">06 90 00 00 00</li>
@@ -75,5 +75,6 @@
 </footer>
 
 <script src="./dropdown.js"></script>
+<script src="./scroll.js"></script>
 
 </body>
