--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <main>
         <section class="home_page">
             <h1 class="title">Jacob's Crystal Car</h1>
+            <a href="tel:+590690 00 00 00"><h1 class="title phone">06 90 00 00 00</h1></a>
+
             <section class="services_section">
                 <div class="service">
                     <img src="./images/adrian-dascal-Ce_gQ7Z0eAc-unsplash.jpg" alt="" class="service_img">
@@ -88,7 +90,7 @@
             </section>
 
             <section class="about" id="about">
-                <h1 class="title">Jacob's</h1>
+                <h1 class="title paragraph">Jacob's services</h1>
                 <div class="intro">
                     <p>
                         Bienvenue chez <b>Jacob's Crystal Car</b>,
@@ -124,7 +126,7 @@
             </section>
 
             <section class="services_details" id="services">
-                <h1 class="title">Jacob's Crystal Car</h1>
+                <h1 class="title paragraph">Jacob's tarifs</h1>
 
                 <table class="service_table">
                     <thead>
@@ -172,5 +174,7 @@
     </footer>
 
     <script src="./dropdown.js"></script>
+    <script src="./scroll.js"></script>
+
 </body>
 </html>
