--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
             </section>
 
             <section class="about" id="about">
-                <h1 class="title paragraph">Jacob's services</h1>
+                <h1 class="title paragraph secondary">Jacob's services</h1>
                 <div class="intro">
                     <p>
                         Bienvenue chez <b>Jacob's Crystal Car</b>,
@@ -126,7 +126,7 @@
             </section>
 
             <section class="services_details" id="services">
-                <h1 class="title paragraph">Jacob's tarifs</h1>
+                <h1 class="title paragraph secondary">Jacob's taifs</h1>
 
                 <table class="service_table">
                     <thead>
@@ -163,7 +163,6 @@
                     </tbody>
                 </table>
             </section>
-            
         </section>
     </main>
 
